--- a/_posts/2015-05-01-Freedom.md
+++ b/_posts/2015-05-01-Freedom.md
@@ -20,11 +20,11 @@ categories: 里程碑
 
 ## 博客
 
-之前用过不少博客产品：CSDN、博客园、简书等等。写了不少文章，但是又逐渐越来越不喜欢它们的风格，因此有了这个博客。
+之前用过不少博客产品：CSDN、博客园、简书等等。写了不少文章，但是又逐渐越来越不喜欢它们的风格，因此有了这个博客。使用GitHub搭建，基于jekyll，样式完全自己控制，图片用七牛。
 
-另外，就像刘末鹏大牛讲的，把自己的想法写下来与大家分享，好处多多!
+博客的作用就不多说，就像刘末鹏大牛讲的，把自己的想法写下来与大家分享，好处多多!
 
-其次，一个博客就像一个土地，种下理想，辛勤劳作让它生根发芽、开花结果，长成一棵惨天大树。
+另外我想，一个博客就像一个土地，种下理想，辛勤劳作让它生根发芽、开花结果，长成一棵惨天大树。
 
 ## 自由
 
