--- a/_posts/2015-05-08-JVM-Basis.md
+++ b/_posts/2015-05-08-JVM-Basis.md
@@ -162,6 +162,6 @@ write|把从工作内存得到的变量写入主存对应的变量中
 
 Thread的底层实现还是比较麻烦的，但是最起码应该知道Thread的状态是如何进行转换：
 
-![线程状态转换图](http://upload-images.jianshu.io/upload_images/195376-13b897ff6d77702b.png)
+![线程状态转换图](http://7xiz10.com1.z0.glb.clouddn.com/JVM之基础-线程状态转换.png)
 
 最后，常见的同步方式是**synchronized**或者**aqs**的各种实现，这里就不讲了，因为每个都足够写一大篇。
