--- a/_posts/2015-05-14-Java-Enum.md
+++ b/_posts/2015-05-14-Java-Enum.md
@@ -37,7 +37,7 @@ enum Color {
 甚至enum还可以去实现接口：
 
 <pre class="prettyprint">
-enum Color implements Comparable<Color> {
+enum Color implements Comparable&lt;Color&gt; {
     RED,
     GREEN;
 }
@@ -113,13 +113,13 @@ static {};
    3:   dup
    4:   ldc     #7; //String RED
    6:   iconst_0
-   7:   invokespecial   #8; //Method "<init>":(Ljava/lang/String;I)V
+   7:   invokespecial   #8; //Method "&lt;init&gt;":(Ljava/lang/String;I)V
    10:  putstatic       #9; //Field RED:LColor;
    13:  new     #4; //class Color
    16:  dup
    17:  ldc     #10; //String GREEN
    19:  iconst_1
-   20:  invokespecial   #8; //Method "<init>":(Ljava/lang/String;I)V
+   20:  invokespecial   #8; //Method "&lt;init&gt;":(Ljava/lang/String;I)V
    23:  putstatic       #11; //Field GREEN:LColor;
    26:  iconst_2
    27:  anewarray       #4; //class Color
