--- a/_posts/2015-05-14-Java-Enum.md
+++ b/_posts/2015-05-14-Java-Enum.md
@@ -76,11 +76,11 @@ for (Color c : Color.values()) {
 System.out.println(Color.valueOf("RED"));
 </pre>
 
-看下来，枚举在定义常量上面的作用还真大。
+看下来，枚举在定义常量上面做了不少友好的封装。
 
 ## 枚举VS常量
 
-首先不同的枚举类是不同的类型，而你用final static修饰的一般都是int等基本类型，这样的常量不容易做到类型检查，这也算是一个枚举的优势：
+首先不同的枚举类是不同的类型，而你用final static修饰的一般都是int等基本类型，这样很难做类型检查，这算是Enum比较大的一个优势的优势，在写代码的时候不会传错参数：
 
 <pre class="prettyprint">
 public static void check(Color c){
@@ -88,7 +88,7 @@ public static void check(Color c){
 }
 </pre>
 
-如果你想封装一种类型的常量类型检查的话（除非有现成的类），为什么不用enum？
+当你传入其他类型参数时会编译出错。
 
 ## enum到底是什么
 
