--- a/_posts/2015-05-11-Cglib.md
+++ b/_posts/2015-05-11-Cglib.md
@@ -77,7 +77,7 @@ public class TestLazyLoader {
 }
 </pre>
 
-感觉有点不可思议，用什么方法才能拦截获取属性这个操作？再仔细想一下，应该不是这样！在System.out.println()执行的时候会调用对象的toString方法，赶紧用**javap -verbose xxx**来看生成的字节码，发现：
+感觉有点不可思议，用什么方法才能拦截获取属性这个操作？再仔细想一下，应该不是这样！在System.out.println()执行的时候会调用对象的toString方法，而cglib做的仅仅是重写toString方法。赶紧用**javap -verbose xxx**来看生成的字节码，发现：
 
 <pre class="prettyprint">
 public final java.lang.String toString();
