--- a/_posts/2015-06-08-Spring.md
+++ b/_posts/2015-06-08-Spring.md
@@ -6,7 +6,7 @@ categories: 编程技术
 
 ---
 
-如今作为一个Java程序员，如果没用过Spring的话基本上没法混了~ 这里就不再啰嗦如何如何从EJB走到了Spring，直接来看它带给我们的东西：
+如今作为一个Java程序员，如果没用过Spring的话基本上没法混了~ 这里就不再啰嗦如何如何从EJB走到了Spring(毕竟咱也没经历过那些个艰难的时代)，直接来看它带给我们的东西：
 
 1. IoC
 2. Aop
