--- a/_posts/2015-06-08-Spring.md
+++ b/_posts/2015-06-08-Spring.md
@@ -6,7 +6,7 @@ categories: 编程技术
 
 ---
 
-如今作为一个Java程序员，如果没用过Spring的话基本上没法混了~ 这里就不再啰嗦如何如何从EJB走到了Spring(毕竟咱也没经历过那些个艰难的时代)，直接来看它带给我们的东西：
+如今作为一个Java程序员，如果没用过Spring的话基本上没法混了~ 这里就不再啰嗦如何如何从EJB走到了Spring(毕竟咱也没经历过那些个艰难的时代)，直接来看它带给我们哪些东西：
 
 1. IoC
 2. Aop
@@ -20,9 +20,9 @@ categories: 编程技术
 
 <pre class="prettyprint">
 public class MyService {
-	private XXService xxService;
+    private XXService xxService;
     public MyService(){
-    	this.xxService = new XXServiceImpl();/* 利用合适的实现进行初始化 */
+        this.xxService = new XXServiceImpl();/* 利用合适的实现进行初始化 */
     }
     // ...
 }
@@ -34,7 +34,7 @@ public class MyService {
 
 <pre class="prettyprint">
 &lt;bean id="myService" class="com.test.MyService"&gt;
-	&lt;property name="xxService" ref="xxService"/&gt;
+    &lt;property name="xxService" ref="xxService"/&gt;
 &lt;/bean&gt;
 &lt;bean id="xxService" class="com.test.XXServiceImpl"/&gt;&lt;!-- 改这里 --&gt;
 </pre>
@@ -50,17 +50,17 @@ MyService myService = (MyService)factory.getBean("myService");
 
 <pre class="prettyprint">
 public class MyService {
-	@Resource /* 利用注解完成注入 */
-	private XXService xxService;
+    @Resource /* 利用注解完成注入 */
+    private XXService xxService;
     // ...
 }
 @Component("xxService") /* 声明一个Bean */
 public class XXServiceImpl{
-	// ...
+    // ...
 }
 </pre>
 
-一直感觉注解在Java中的作用就是将配置信息植入到代码文件里面，在依赖管理中注解再一次发挥了巨大的威力。到这里基本上满足大部分的需求了，但是Spring提供的功能可能远超过了你需要的：
+一直感觉注解在Java中的作用就是将配置信息植入到代码文件里面，现在在依赖管理中注解再一次发挥了巨大的威力。到这里基本上满足大部分的需求了，但是Spring提供的功能可能远超过了你需要的：
 
 1. BeanFactoryAware：获取BeanFactory实例
 2. BeanPostProcessor：在afterPropertiesSet的方法前后执行
