--- a/_posts/2015-06-10-VIM.md
+++ b/_posts/2015-06-10-VIM.md
@@ -10,7 +10,7 @@ categories: 工具
 
 很早之前就知道VIM很厉害，不过作为一个Java攻城狮，用起来实在是不方便，完全没有Eclipse或者IDEA写代码顺畅，比如代码提示等（怀疑自己配置有问题）。最近对golang非常感兴趣，然而默认的IDE实在是太丑了，所以决心把VIM捡起来。
 
-周围用Emacs的同事越来越多，但是简单用了几次，总觉得不怎么顺手，也就不了了之。感觉还是带着vimrc走天下比较轻松一些。
+周围用Emacs的同事越来越多，但是简单用了几次，总觉得不怎么顺手，也就不了了之。
 
 ## 插件管理器
 
@@ -21,3 +21,30 @@ categories: 工具
 > git clone https://github.com/gmarik/vundle.git ~/.vim/bundle/vundle
 
 然后修改**vimrc**文件：
+
+<pre class="prettyprint">
+set nocompatible "关闭兼容模式
+filetype off "
+set rtp+=~/.vim/bundle/Vundle.vim " 写自己安装的目录
+call vundle#begin() "
+
+Bundle 'gmarik/Vundle.vim' " 插件列表
+" ... 插件列表
+
+call vundle#end() "
+filetype plugin indent on
+</pre>
+
+如果是**vim-scripts**下面的插件直接写名字就好了，否则为**用户名/插件**的格式，使用时用到的几个命令如下：
+
+命令|作用
+-|-
+:BundleList|列举出列表中(.vimrc中)配置的所有插件
+:BundleInstall|安装列表中全部插件
+:BundleInstall!|更新列表中全部插件
+:BundleSearch foo|查找foo插件
+:BundleSearch! foo|刷新foo插件缓存
+:BundleClean|清除列表中没有的插件
+:BundleClean!|清除列表中没有的插件
+
+## 写代码之前
