--- a/_posts/2015-06-10-VIM.md
+++ b/_posts/2015-06-10-VIM.md
@@ -8,7 +8,7 @@ categories: 工具
 
 ![](http://7xiz10.com1.z0.glb.clouddn.com/VIM-LOGO.jpg)
 
-很早之前就知道VIM很厉害，不过作为一个Java攻城狮，用起来实在是不方便，完全没有Eclipse或者IDEA写代码顺畅，比如代码提示等（怀疑自己配置有问题）。最近对golang非常感兴趣，然而默认的IDE实在是太丑了，所以决心把VIM捡起来。
+很早之前就知道VIM很厉害，不过作为一个Java攻城狮，用起来实在是不方便，完全没有Eclipse或者IDEA写代码顺畅，比如代码提示等（怀疑自己配置有问题-.-!）。最近对golang非常感兴趣，然而默认的IDE实在是太丑了，所以决心把VIM捡起来。
 
 周围用Emacs的同事越来越多，但是简单用了几次，总觉得不怎么顺手，也就不了了之。
 
