--- a/_posts/2015-06-08-Spring.md
+++ b/_posts/2015-06-08-Spring.md
@@ -130,7 +130,7 @@ public class LocalCacheAspect {
 1. JDK动态代理
 2. CGLIB字节码生成
 
-如果你想选择cglib需要配置文件中加上**<aop:aspectj-autoproxy proxy-target-class="true"/>**。
+如果你想选择cglib需要配置文件中加上**&lt;aop:aspectj-autoproxy proxy-target-class="true"/&gt;**。
 AOP中涉及到的细节整理如下(不断更新中)：
 
 关键字|作用
