--- a/_posts/2015-06-08-Spring.md
+++ b/_posts/2015-06-08-Spring.md
@@ -141,9 +141,52 @@ Joinpoint|具体运行时拦截到的信息
 
 ## MVC
 
+细想一下大部分的Java程序员应该都在直接或者间接的做页面开发，那么这里就涉及到分层的概念了，当然这里不会讲这些东西。在WEB应用作用，不能不提**web.xml**,其中需要清楚
 
+1. **filter**
+2. **listener**
+3. **servlet**
 
+它们的作用以及运行机制，在通过SpringMVC来开发Web应用前，需要配置：
 
+<pre class="prettyprint">
+    &lt;servlet&gt;
+        &lt;servlet-name&gt;spring&lt;/servlet-name&gt;
+        &lt;servlet-class&gt;org.springframework.web.servlet.DispatcherServlet&lt;/servlet-class&gt;
+        &lt;load-on-startup&gt;2&lt;/load-on-startup&gt;
+    &lt;/servlet&gt;
+    &lt;servlet-mapping&gt;
+        &lt;servlet-name&gt;spring&lt;/servlet-name&gt;
+        &lt;url-pattern&gt;*.htm&lt;/url-pattern&gt;
+    &lt;/servlet-mapping&gt;
+</pre>
+
+这样就把所有以**.htm**结尾的请求都交给**DispatcherServlet**进行具体的处理并返回，过程如下：
+
+![](http://)
+
+常用的**handleMapping**的方式有：
+
+1. SimpleUrlHandlerMapping
+2. DefaultAnnotationHandlerMapping
+3. AnnotationMethodHandlerAdapter
+
+用注解的方式更直观一些，在代码中直接就可以明白你正在处理什么样的请求，最简单的一个例子：
+
+<pre class="prettyprint">
+@Controller
+@RequestMapping("/helloAnnoController.html")
+public class AnyTypeYouLikeController{
+    @RequestMapping(method={RequestMethod.GET,RequestMethod.POST})
+    public String processWebRequest(){
+        return "anno/helloAnnController";
+    }
+}
+</pre>
+
+PS：现在各种WEB框架非常多，关键是了解它们运行机制，在遇到问题的时候可以DEBUG去找到解决办法，对某个框架有哪些“奇技淫巧”就不说了，细节太多了···
+
+## 数据访问
 
 
 
