--- a/_posts/2015-06-08-Spring.md
+++ b/_posts/2015-06-08-Spring.md
@@ -188,10 +188,156 @@ PS：现在各种WEB框架非常多，关键是了解它们运行机制，在遇
 
 ## 数据访问
 
+首先想想要想是的访问数据更方便，Spring应该做什么事情？
 
+1. 统一的异常处理
+2. 将相同（类似）操作进行封装
 
+如果直接用JDBC来完成数据访问，大致如下：
 
+<pre class="prettyprint">
+try{
+    Connection connection = getDataSource().getConnection();
+    Statement statement = connection.createStatement();
+    // TODO 执行数据库操作
+    statement.executeUpdate("sql...");
+    statement.close();
+}finally{
+    statement.close();
+    connection.close();
+}
+</pre>
 
+显然在使用JDBC API处理数据的时候会有大量相似的代码，不仅增加了代码量，而且使得业务
+逻辑不清晰、工程难维护。在Spring中用**JdbcTemplate**通过模板方式来解决这些问题：
 
+<pre class="prettyprint">
+public class JdbcTemplate {
+    public Object execute(StatementCallback action) throws DataAccessException
+    {
+       // 将连接数据库等操作抽取出来
+    }
+}
+</pre>
 
+在JdbcTemplate中定义了很多queryXXX和updateXXX的方法，其本质上还是**Callback**的方
+式实现的，定义出来方便我们使用：
 
+<pre class="prettyprint">
+JdbcTemplate jdbcTemplate = new JdbcTemplate();
+jdbcTemplate.setDataSource(ds);
+jdbcTemplate.execute(new StatementCallback(){
+    public Object doInStatement(Statement stmt) throws SQLException {
+        stmt.execute("your sql");
+        return ret;
+    }
+}
+</pre>
+
+这样编码起来方便了很多，但是接着会想如果我们把SQL写到单独的文件里面，这样剥离开应该
+会更好一下吧，这样就有了各种ORM，比如**iBatis**和**Hibernate**，在iBatis中用SqlMapClient
+来访问数据，通常访问的方式有三种：
+
+<pre class="prettyprint">
+//1、基于SqlMapCLient的自动提交事务型简单数据访问
+Map parameters = new HashMap();
+parameters.put("param1", value);
+// ..
+Object ret = sqlMap.queryForObject("sql_id", parameters);
+// 2、基于SqlMapClient的非自动提交事务型数据访问
+try{
+    sqlMap.startTransaction();
+    sqlMap.update("....");
+    sqlMap.commitTransaction();
+} finally {
+    sqlMap.endTransaction();
+}
+// 3、基于SqlMapSession的数据访问
+SqlMapSession session = null;
+try{
+    session = sqlMap.openSession();
+    session.startTransaction();
+    session.update("...");
+    session.commitTransaction();
+} finally {
+    session.endTransaction();
+}
+</pre>
+
+因为Spring在集成iBatis的时候要考虑将事务控制也纳入进来，所以使用基于SqlMapSession
+的数据访问方式对iBatis进行集成，这种方式更灵活，可以将iBatis内部直接指定的数据源和事
+务管理器等转由外部提供（IoC），**SqlMapClientTemplate**是Spring为iBatis的数据访问操
+作提供的模板方法类：
+
+<pre class="prettyprint">
+public class SqlMapClientTemplate {
+    public Object execute(SqlMapClientCallback action) throws DataAccessException {
+        // ...
+    }
+}
+</pre>
+
+SqlMapClientCallback可以完成任何基于iBatis的数据访问操作，比如要向一个数据库批量提
+交更新数据：
+
+<pre class="prettyprint">
+protected void batchInsert(final List beans) {
+    sqlMapClientTemplate.execute(new SqlMapClientCallback() {
+        public Object doInSqlMapClient(SqlMapExecutor executor) throws SQLException {
+            executor.startBatch();
+            Interator iter = beans.iterator();
+            while(iter.hasNext()) {
+                Bean bean = (Bean) iter.next();
+                executor.insert("insert_name", bean);
+            }
+            executor.executeBatch();
+            return null;
+        }
+    });
+}
+</pre>
+
+最后来看事务处理，局部事务的话用法如下：
+
+<pre class="prettyprint">
+try{
+    transaction = session.beginTransaction();
+    // TODO 操作数据
+    session.flush();
+    transaction.commit();
+} catch (Exception e){
+    transaction.rollback(); // 回滚
+} finally {
+    session.close();
+}
+</pre>
+
+因为JDBC的局部事务控制是由同一个Connection来完成的，所以要保证两个DAO的数据访问
+方式处于一个事务中，我们就得保证他们使用的是同一个Connection，要做到这一点，通常采
+用称为connection-passing的方式，即为同一个事务中的各个DAO的数据访问传递当前事务对
+应的同一个Connection。
+
+我们可以直接使用PlatformTransactionManager，如下：
+
+<pre class="prettyprint">
+DefaultTransactionDefinition definition = new DefaultTransactionDefinition();
+definition.setXXX();
+definition.setXXX();
+TransactionStatus status = transactionManager.getTransaction(definition);
+try {
+    // TODO 业务逻辑
+} catch (Exception e) {
+    transactionManager.roolback(status);
+}
+transactionManager.commit(status);
+</pre>
+
+可以看到上面有很多重复的操作，接着用TransactionTemplate对事务的管理进行模板化。而
+基于申明式的事务有四种方式：
+
+1. ProxyFactory + TransactionInterceptor
+2. TransactionProxyFactoryBean
+3. BeanNameAutoProxyCreator
+4. Spring 2.x申明事务配置方式
+
+当然也可以通过注解**@Transactional**来申明事务。
