--- a/_posts/2015-07-04-Cookie.md
+++ b/_posts/2015-07-04-Cookie.md
@@ -52,11 +52,12 @@ Secure|只在HTTPS的链接中才能正常使用，否则就当它不存在吧
 
 ## 安全
 
+在cookie中保存很多关键性的数据，不过不安全还是挺蛋疼的，我们来看看这套机制的设计者是如何考虑安全问题的：
 
+> 不能跨域访问
 
+要是我能随便增加、删除别人的网站上面的cookie，那就没法玩了~ 由于在JS中也可以操作cookie，那么对于有输入的应用（比如博客）就危险了，用户输入一段JS同样也可以进行操作了：
 
+> 设置HttpOnly属性之后不能通过脚本访问
 
-
-
-
-
+有了上面两个限制，那么剩下的事情就是防止别人模拟发送请求就可以了，比如通过随机数的方式。
