--- a/_posts/2015-07-31-Jstorm.md
+++ b/_posts/2015-07-31-Jstorm.md
@@ -15,8 +15,8 @@ categories: 编程技术
 
 数据处理方面根据不同的场景大致可以分为下面两种场景：
 
-1. 离线分析：特点是查询单一、数据加工过程也单一，用Hadoop来解决；
-2. 在线分析：特点是查询随机，玩的就是索引，那么QPS必然不会很高，而且需要的都是好机器，可以用阿里云的ADS来解决；
+1. **离线分析**：特点是查询单一、数据加工过程也单一，用Hadoop来解决；
+2. **在线分析**：特点是查询随机，玩的就是索引，那么QPS必然不会很高，而且需要的都是好机器，可以用阿里云的ADS来解决；
 
 看是天下太平，但真正用的时候还是会有问题：
 
