--- a/_posts/2015-09-11-Css-Less.md
+++ b/_posts/2015-09-11-Css-Less.md
@@ -53,13 +53,30 @@ border|边框
 }
 </pre>
 
-就可以在对应的DIV中展示出局部图片，这个局部就可能是某个ICON，感觉这完全是在当图片使用额~
+就可以在对应的DIV中展示出局部图片，这个局部就可能是某个ICON，感觉这完全是在当图片使用额~ 当内容超过限制的时候可以使用
+
+1. overflow
+2. overflow-x
+3. overflow-y
+
+来进行控制，但是滚动条的默认样式实在是太丑了，在[这里](http://www.webhek.com/scrollbar)找到一种修改的方法，对于**-webkit-**核的浏览器来说很简单，但是要去兼容IE+FX比较麻烦，可以考虑用[jQuery插件](http://www.jqcool.net/demo/201404/jquery-jscrollpane/)。
+
+## 变换和动画
+
+
 
 ## LESS
 
+![](http://www.1024i.com/demo/less/images/logo.png)
 
+虽然它的口号是**LESS IS MORE, THAN CSS**，但是确实感觉LESS是在CSS的基础上增加了一些扩展
 
+1. 变量
+2. 继承
+3. 嵌套
+4. 运算
+5. 函数
 
-
+另外LESS实际兼容CSS的（也就是说你可以在里面直接写CSS代码），实际使用时可以在后端将其打包（比如Grunt）成CSS文件之后再提供给前端，具体用法可以看[这里](http://www.1024i.com/demo/less/index.html)的中文文档。
 
 ## 总结
