--- a/_posts/2015-09-16-Jquery.md
+++ b/_posts/2015-09-16-Jquery.md
@@ -102,14 +102,64 @@ which()|鼠标点击或者键盘点击事件中，获取具体的按键
 
 为了操作方便经常需要做一些快捷键，比如按F5就运行程序，效果和点击运行按钮一样。这个做起来很简单，用**trigger**模拟向运行按钮发送一个click事件即可。
 
+产品经理经常会想给事件响应加上一个酷炫的动画效果，用jQuery做起来很简单：
+
+操作|效果
+-|-
+show/hide|显示、隐藏元素，可通过参数控制速度
+fadeIn/fadeOut|改变元素不透明度
+slideUp/slideDown|改变元素高度
+animate|自定义动画，上面的功能用该方法都很容易搞定
+toggle|两种状态切换，用在按钮的效果上面非常合适
+slideToggle|通过高度变化来切换元素的可见性
+fadeTo|以渐进的方式修改不透明度
+
+其中**animate**的定义如下：
+
+> animate(params, speed, callback)
+
+参数含义如下：
+
+1. params：包含样式属性及值的映射，用来控制动画的行为
+2. speed：速度
+3. callback：结束时的回调函数
+
+下面来看几个实际的例子感受下：
+
+<pre class="prettyprint">
+$(this).animate({left:"500px"}, 3000);// 使left从原来的值变为500
+$(this).animate({left:"+=500px"}, 3000);// 使left从原来的值增加500
+$(this).animate({left:"+=500px",height:"+=600px"}, 3000);// 多重动画
+$(this).animate({left:"+=500px"}, 3000)
+       .animate({height:"+=500px"}, 3000);// 两个动画效果链式写法
+</pre>
+
+延迟总是会带来问题，比如为元素的移入、移出设计了动画，但是在鼠标快速移动的时候动画的效果可能就与实际鼠标的位置不一致了，这时候需要
+
+> stop([cleanQueue] \[, gotoEnd])
+
+其中：
+
+1. cleanQueue：是否清空未执行完成的动画
+2. gotoEnd：是否将正在执行的动画跳转到末状态
+
+另外可以使用**$(this).is(":animated")**判断元素是否处于动画状态！
+
+## 表单及表格
+
+// TODO 144
+
+## Ajax
+
+## 插件
+
+
 
 [API](http://jquery.cuishifeng.cn/index.html)
 
 ## 总结
 
 2. 链式操作
-4. 事件
-5. 动画
 6. 表单+表格
 7. ajax
 8. 插件
