--- a/_posts/2015-09-16-Jquery.md
+++ b/_posts/2015-09-16-Jquery.md
@@ -68,24 +68,30 @@ $(function(){
 });
 </pre>
 
-作用像是绑定了对ready的响应，而对于普通的事件（鼠标点击等）可以用**bind**来统一搞定：
+作用像是绑定了对ready的响应，而对于普通的事件（鼠标点击等）可以用**on**来统一搞定：
 
-> bind(type, [, data], fn)
+> on(events, [, selector] \[, data], handler)
+> on( eventsMap [, selector ] \[, data ] )
 
-其中：
-- **type**：事件类型，可以是自定义名称
-- **data**：可选参数，作为event.data属性值传递给事件对象的额外数据对象
-- **fn**：绑定的处理函数
+参数的含义如下：
 
-另外在jQuery中有两个合成事件：**hover**和**toggle**，对于hover：
+1. **events**：一个或多个用空格分隔的事件类型和可选的命名空间
+2. **eventsMap**：属性对应事件类型和可选的命名空间，属性值对应绑定的事件处理函数
+3. **selector**：指定哪些后代元素可以触发绑定的事件
+4. **data**：触发事件时，需要通过event.data传递给事件处理函数的任意数据
+5. **handler**：事件处理函数
+
+**注**：在jQuery1.8之后bind、delegate、live都不建议使用，所以干脆就都用on好了！
+
+另外并不是每个事件都只有一个处理函数，在jQuery中有两个合成事件：**hover**和**toggle**，其中hover的使用方法如下：
 
 > hover(enter, lever)
 
-分别用两个函数来响应移入和移出，而toggle就比较暴力了：
+分别用两个函数来响应移入和移出，相比较toggle就更加暴力了：
 
 > toggle(f1, f2, ...., fn)
 
-在第一次点击时调用f1、第二次调用f2、依次类推，n个方法循环调用（没想到需要用到什么地方- -!），jQuery对事件对象进行了封装：
+在第一次点击时调用f1、第二次调用f2、依次类推，n个方法循环调用（没想到需要用到什么地方- -!），jQuery对事件对象进行了封装，提供如下方法：
 
 方法|作用
 -|-
@@ -98,11 +104,10 @@ which()|鼠标点击或者键盘点击事件中，获取具体的按键
 
 既然能绑定就应该能解除：
 
-> unbind([type] \[, fn])
+> jQueryObject.off( [ events [, selector ] \[, handler ] ] )
+> jQueryObject.off( eventsMap [, selector ] )
 
-为了操作方便经常需要做一些快捷键，比如按F5就运行程序，效果和点击运行按钮一样。这个做起来很简单，用**trigger**模拟向运行按钮发送一个click事件即可。
-
-产品经理经常会想给事件响应加上一个酷炫的动画效果，用jQuery做起来很简单：
+**注**：可以用**trigger**来模拟事件，用来实现一些功能（比如快捷键）还是非常方便的！在jQuery中对DOM元素上的动画做了一些封装（不用再蛋疼地使用setTimeout）：
 
 操作|效果
 -|-
@@ -120,9 +125,9 @@ fadeTo|以渐进的方式修改不透明度
 
 参数含义如下：
 
-1. params：包含样式属性及值的映射，用来控制动画的行为
-2. speed：速度
-3. callback：结束时的回调函数
+1. **params**：包含样式属性及值的映射，用来控制动画的行为
+2. **speed**：速度
+3. **callback**：结束时的回调函数
 
 下面来看几个实际的例子感受下：
 
@@ -145,21 +150,100 @@ $(this).animate({left:"+=500px"}, 3000)
 
 另外可以使用**$(this).is(":animated")**判断元素是否处于动画状态！
 
-## 表单及表格
-
-// TODO 144
-
 ## Ajax
+
+全称为**Asynchronous JavaScript and XML**，并不是指一种单一的技术，而是有机地利用一系列交互式网页应用相关的技术所形成的结合体，优势：
+
+1. 不需要插件支持
+2. 优秀的用户体验
+3. 提高Web程序的性能
+4. 减轻服务器和带宽的负担
+
+不足：
+
+1. 浏览器对XMLHttpRequest对象的支持度不足
+2. 破坏浏览器前进、后退按钮的正常功能
+3. 对搜索引擎的支持不足
+4. 开发和调试工具的缺乏
+
+关于JavaScript原生的写法可以看[这里](http://wsztrush.github.io/%E7%BC%96%E7%A8%8B%E6%8A%80%E6%9C%AF/2015/09/09/JavaScript-Basic.html)，在jQuery中的封装如下：
+
+方法|作用
+-|-
+load(url [,data] \[, callback])|加载HTML文档并插入DOM中
+get(url [,data] \[, callback] \[, type])|使用GET方式异步请求
+post(url [,data] \[, callback] \[, type])|使用POST方式异步请求
+getScript()|加载脚本文件
+getJson()|加载JSON文件
+ajax()|最底层的实现，是其他方法的基础
+
+方法ajax()的参数如下：
+
+1. **url**：发送请求的地址
+2. **type**：请求方式（GET or POST）
+3. **timeout**：请求超时时间（毫秒）
+4. **data**：发送到服务端的数据
+5. **dataType**：预期服务器返回的数据类型
+6. **beforeSend**：发送请求前执行的函数
+7. **complete**：请求完成后的回调函数
+8. **success**：请求成功后的回调函数
+9. **error**：请求失败时的回调函数
+10. **global**：是否触发全局Ajax事件
+
+对于巨大的表单在提交的时候获取参数是非常繁琐的，在jQuery做了简单的封装serialize()、serializeArray()、param()。在用上面的方法发送请求的过程中会触发事件：
+
+1. ajaxStart
+2. ajaxSend
+3. ajaxSuccess
+4. ajaxComplete[](http://)
+5. ajaxError
+6. ajaxStop
+
+利用这些事件我们可以很容易为请求的各个环节封装相同的响应！
 
 ## 插件
 
+jQuery的插件非常多，再很多地方（比如[这里](http://www.htmleaf.com/)）可以搜索，这里主要来看下自己如何造插件，涉及到的方法有：
 
+> jQuery.extend( target [, object1 ] \[, objectN... ] )
+> jQuery.extend( [ deep ], target , object1 [, objectN... ] )
 
-[API](http://jquery.cuishifeng.cn/index.html)
+该方法用来将一个或者多个对象的成员属性和方法复制到指定的对象上，参数的含义为：
+
+1. **deep**：是否深度合并对象
+2. **target**：目标对象，其他对象的成员属性将被复制到该对象上
+3. **object1**：第一个被合并的对象
+4. **objectN**：第N个被合并的对象
+
+还有一个用来扩展jQuery对象方法：
+
+> jQuery.fn.extend( object )
+
+现在可以编写插件了：
+
+<pre class="prettyprint">
+;(function($){
+    // 封装jQuery对象方法
+	$.fn.extend({
+        "color" : function(value){/* 插件代码 */}
+    })
+    // 直接对jQuery对象进行扩展
+    $.extend({
+        ltrim : function(text) {
+            return (text || "")
+        }
+    })
+})(jQuery);
+</pre>
+
+编写一些插件写法需要对jQuery本身的运行的机制由一定的了解~
 
 ## 总结
 
-2. 链式操作
-6. 表单+表格
-7. ajax
-8. 插件
+jQuery主要是用来简化开发，对JavaScript做了一些封装，不需要再考虑很多兼容性的东西，而且代码也更加简洁，列出一些参考资料：
+
+- [api](http://jquery.cuishifeng.cn/index.html)
+- [codeplayer](http://www.365mini.com/doc)
+- [jquery之家](http://www.htmleaf.com/)
+- [jquery最佳实践](http://www.ruanyifeng.com/blog/2011/08/jquery_best_practices.html)
+- [jquery设计思想](http://www.ruanyifeng.com/blog/2011/07/jquery_fundamentals.html)
