--- a/_posts/2015-10-19-ACEJS-A.md
+++ b/_posts/2015-10-19-ACEJS-A.md
@@ -1,10 +1,66 @@
 ---
 layout: post
-title: 代码高亮（ACEJS）初级篇
+title: 用ACE做WEB代码高亮（初级篇）
 date: 2015-10-19
 categories: 编程技术
 
 ---
+
+后台应用通常会有很多的配置页面，现在在状态是直接搞一个textarea来搞：
+
+![](http://7xiz10.com1.z0.glb.clouddn.com/ACE-1.PNG)
+
+这种粗糙、QJ用户的行为显然不是一个有节操的程序员该干的，为了这种配置的页面好用最少应该提供三个功能：
+
+1. 高亮：提示关键字、类型，可以在第一时间发现简单错误
+2. 缩进：增加配置可读性的最简单的办法
+3. 折叠：有一大堆的配置的时候折叠还是挺好用的
+
+在网上逛了一圈发现Colud9的ACE还是挺好用的（GitHub上10000+的Star也说明了实力），可以在[这里](https://ace.c9.io/build/kitchen-sink.html)体验下，国内的[coding.net](https://coding.net/)平台所使用的也是该工具，但是做出来的效果离Colud9还是有不小的差距。。。
+
+由于网上的资料不多，学习过程非常痛苦，有些东西是直接看[代码](https://github.com/ajaxorg/ace)去猜测运行的原理，希望对需要的人有一点帮助！
+
+## 使用
+
+使用方法很经典（和HighCharts等前端框架差不多）：
+
+<pre class="prettyprint">
+
+</pre>
+
+
+
+## 高亮
+
+
+
+## 缩进
+
+
+
+## 折叠
+
+
+
+
+
+## 总结
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
