--- a/_posts/2015-10-19-ACEJS-A.md
+++ b/_posts/2015-10-19-ACEJS-A.md
@@ -22,13 +22,42 @@ categories: 编程技术
 
 ## 使用
 
-使用方法很经典（和HighCharts等前端框架差不多）：
+使用方法很经典（和HighCharts等差不多）：
 
 <pre class="prettyprint">
-
+&lt;!DOCTYPE html&gt;
+&lt;head&gt;
+&lt;style type="text/css" media="screen"&gt;
+    #editor {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+    }
+&lt;/style&gt;
+&lt;/head&gt;
+&lt;body&gt;
+&lt;div id="editor"&gt;function foo(items) {
+    var x = "All this is syntax highlighted";
+    return x;
+}&lt;/div&gt;
+&lt;script src="https://ace.c9.io/build/src/ace.js" type="text/javascript" charset="utf-8"&gt;&lt;/script&gt;
+&lt;script&gt;
+    var editor = ace.edit("editor");
+    editor.setTheme("ace/theme/monokai");
+	editor.getSession().setMode("ace/mode/javascript");
+&lt;/script&gt;
+&lt;/body&gt;
+&lt;/html&gt;
 </pre>
 
+完成后ACE会在`<div id="editor"></div>`渲染出对应的DOM结构，其中：
 
+1. **editor.setTheme**：设置主题，有点皮肤的意思
+2. **editor.getSession().setMode**：设置模式，上面这段设置的是JavaScript的模式，其中包括了高亮、缩进、折叠凳功能
+
+内部有大部分语言的模式，正常情况下你是不需要考虑后面的内容的。后来有同事用drools做规则引擎，这个没有现成的只能自己来搞！
 
 ## 高亮
 
