--- a/_posts/2015-10-19-ACEJS-A.md
+++ b/_posts/2015-10-19-ACEJS-A.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 用ACE做WEB代码高亮（初级篇）
+title: 用ACE做WEB代码高亮（一）
 date: 2015-10-19
 categories: 编程技术
 
@@ -61,49 +61,154 @@ categories: 编程技术
 
 ## 高亮
 
+让代码高亮显示的思路很简单，比如将关键字用`<span class="ace_keyword"></span>`包裹起来并在CSS中设置样式即可，那么关键问题就是如何对源码进行**词法分析**了。
 
+在ACE中实现的时候有点像**状态机**，在处理时不断地从当前状态的规则集中找到匹配`regex`的规则，之后跳转到对应的`next`状态：
+
+<pre class="prettyprint">
+this.$rules = {
+    "start" : [
+        {
+            token: &lt;token&gt;, // class名称
+            regex: &lt;regex&gt;, // 正则匹配串
+            next:  &lt;next&gt;   // 下个状态
+        }
+    ]
+};
+</pre>
+
+相比普通的词法分析器，一个状态就相当于一个小的隔离环境，在这个隔离环境中在做匹配的时候难度要小很多，你只需要考虑在该状态内可能出现的TOKEN即可：
 
 ![](http://7xiz10.com1.z0.glb.clouddn.com/ACE-2.PNG)
 
+另外比较好用的几点：
+
+1. 设置**merge:true**来合并连续的token
+2. 利用**createKeywordMapper**来简化关键字列表的编写
+
+那么简单来做个drools高亮的Mode如下：
+
+<pre class="prettyprint">
+ace.define("ace/mode/drools_highlight_rules", function(require, exports, module) {
+    "use strict";
+    var oop = require("../lib/oop");
+    var TextHighlightRules = require("./text_highlight_rules").TextHighlightRules;
+    var DroolsHighlightRules = function(){
+        var keywordMapper = this.createKeywordMapper({
+            "keyword":
+                "when|then|rule|end|salience"
+        }, "identifier");
+        this.$rules = {
+            "start" :[{
+                token : keywordMapper,
+                regex : "[a-zA-Z_$][a-zA-Z0-9_$]*\\b"
+            }]
+        };
+    };
+    oop.inherits(DroolsHighlightRules, TextHighlightRules);
+    exports.DroolsHighlightRules = DroolsHighlightRules;
+});
+ 
+ace.define("ace/mode/drools", function(require, exports, module) {
+    "use strict";
+    var oop = require("../lib/oop");
+    var TextMode = require("./text").Mode;
+    var DroolsHighlightRules = require("./drools_highlight_rules").DroolsHighlightRules;
+    var DroolsMode = function(){
+        this.HighlightRules = DroolsHighlightRules;
+    };
+    oop.inherits(DroolsMode, TextMode);
+    (function() {
+        this.$id = "ace/mode/drools"
+    }).call(DroolsMode.prototype),
+    exports.Mode = DroolsMode;
+});
+</pre>
+
+效果如下：
 
 ![](http://7xiz10.com1.z0.glb.clouddn.com/ACE-3.PNG)
 
-
-
-
-
-
+更多的功能可以在[这里](https://ace.c9.io/#nav=higlighter)看到，不过貌似很不稳定- -！
 
 ## 缩进
 
+ACE为MODE扩展缩进预留了接口，你只需要实现**getNextLineIndent**方法即可，会将其结果自动添加到新行的开头，参数含义为：
 
+1. state：状态
+2. line：当前行内容
+3. tab：缩进符号
 
+来看个例子（如果是{[(结尾的，那么下一行的缩进加一）：
 
+<pre class="prettyprint">
+(function(){
+    this.getNextLineIndent = function(state, line, tab) {
+        var indent = this.$getIndent(line);
+        if (state == "start") {
+            var match = line.match(/^.*[\{\(\[]\s*$/); // 如果是{[(结尾的，那么下一行的缩进加一
+            if (match) {
+                indent += tab;
+            }
+        }
+        return indent;
+    };
+}).call(DroolsMode.prototype);
+</pre>
 
+对大部分的缩进需求这种方式完全能搞定了。
 
 ## 折叠
 
+折叠的实现涉及到范围对象new Range(Number startRow, Number startColumn, Number endRow, Number endColumn)：
 
+1. startRow：开始行
+2. startColumn：开始列
+3. endRow：结束行
+4. endColumn：结束列
 
+实现折叠需要提供两个方法：
 
+1. **getFoldWidget**：折叠开始的地方
+2. **getFoldWidgetRange**：需要折叠的范围
+
+下面我们为drools实现一个简单的折叠逻辑，也就是将**rule**与**end**之间的部分能够折叠隐藏：
+
+<pre class="prettyprint">
+ace.define("ace/mode/folding/drools_fold", function(require, exports, module) {
+    "use strict";
+    var Range = require("../../range").Range;
+    var FoldMode = exports.FoldMode = function() {};
+    (function() {
+        this.getFoldWidget = function(session, foldStyle, row) {
+            var line = session.getLine(row);
+            if (line == "rule")
+                return "start";
+            return "";
+        };
+        this.getFoldWidgetRange = function(session, foldStyle, row) {
+            var startRow = row, startColumn = 4;
+            var endRow = row+1, endColumn = 3;
+            while(session.getLine(endRow) != "end"){
+                endRow += 1;
+            }
+            return new Range(startRow, startColumn, endRow, endColumn);
+        };
+    }).call(FoldMode.prototype);
+});
+</pre>
+
+然后需要在drools的Mode中设置**foldingRules**：
+
+<pre class="prettyprint">
+var DroolsFoldMode = require("ace/mode/folding/drools_fold").FoldMode;
+var DroolsMode = function(){
+    this.foldingRules = new DroolsFoldMode();
+};
+</pre>
+
+在ACE中提供了一个基本的折叠块：**fold_mode**，用来折叠相同的缩进部分，如果需要直接集成即可！
 
 ## 总结
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+实现了这三部分功能已经可以大幅度提升简单配置页面的体验，但是作为一个在线的IDE才仅仅是万里长征的第一步！
