--- a/_posts/2015-12-17-DOWN-TO-UP.md
+++ b/_posts/2015-12-17-DOWN-TO-UP.md
@@ -6,7 +6,78 @@ categories: 编程技术
 
 ---
 
-因为在公司接触业务比较少,更多的是
+因为在公司接触业务比较少，更多的是在想办法做一些工具来帮助快速开发，过程中感觉做业务的思路与做工具（系统）的思路差别比较大。下面分享一下在两个模块中的思考过程。
+
+## 获取数据
+
+团队做的业务复杂无比，其中包括很多报表，如果按照一般的开发流程：
+
+1. iBatis(SQL)
+2. DAO+DO
+3. Manager
+4. Web+VO
+
+有几十张这样的报表的话，写起来还是非常痛苦的。那么，思考一下是否可以把里面真正的**逻辑部分**取出来，其他的代码都非常像就直接重用即可：
+
+> 写一个SQL就可以完成数据的读取和组织！
+
+那么现在配置数据接口就非常简单了。
+
+当初乐观地以为这样就结束了，**图样图森破啊**！！SQL返回的其实是一个LIST，而实际中报表的类型千差万别：
+
+<pre class="prettyprint">
+{
+    title : "xxx",
+    data : [1, 2, 3, 4, 5, 6, 7, 8]
+}
+</pre>
+
+还有：
+
+<pre class="prettyprint">
+[
+    {text : 'A', value : 1},
+    {text : 'B', value : 2}
+]
+</pre>
+
+甚至还有一些常量、枚举，于是我们火速开发了更多的一些取数据的功能：
+
+1. MYSQL
+2. MYSQL-XXX
+3. JSON
+4. VELOCITY
+5. XXXX
+
+最后我们增加了一个**GROOVY**加工数据的功能，世界一下子清净。但是，看起来很美好的一个设计用起来其实并不那么美好。
+
+在一开始考虑的时候只想到：
+
+> 我要一个可以XXX的系统。
+
+写代码的时候直接奔着这个目标就去了，不带任何的拐弯抹角。当我们一步到位完成后洋洋得意时，可能更多的考虑下：
+
+> 我们的系统可以从哪些地方可以扩展？留有多少的灵活性？
+
+回归正题，尝到一点脚本语言的甜头后：
+
+> 是否可以用脚本来加工数据？应该没有比这个更灵活的了～
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+## 组装页面
+
 
 
 <!--
