--- a/_posts/2015-12-17-DOWN-TO-UP.md
+++ b/_posts/2015-12-17-DOWN-TO-UP.md
@@ -23,7 +23,7 @@ categories: 编程技术
 
 其他的操作（数据库、返回数据）不需要你再关心了。YY了一下大部分的需求用SQL绝对绰绰有余，这件事情就这样结束了！**图样图森破啊**！！
 
-马上我们遇到了这样的需求：
+我们遇到了这样的需求：
 
 <pre class="prettyprint">
 {
@@ -41,7 +41,7 @@ categories: 编程技术
 ]
 </pre>
 
-于是我们火速开发了更多的一些功能组件来解决遇到对应的问题：
+于是火速开发了更多的功能组件来解决问题：
 
 1. MYSQL
 2. MYSQL-XXX
@@ -51,7 +51,7 @@ categories: 编程技术
 
 组件越来越多，“新手”进来已经不是特别了解每个的具体含义，配置的成本也越来越大。感觉系统用起来并不想当初想的那么美好！
 
-从一开始的目标：
+停下来想一下，从一开始的目标：
 
 > 我要一个可以干啥干啥的功能！
 
@@ -59,7 +59,7 @@ categories: 编程技术
 
 > 系统有多少的灵活性、可以从哪些方面扩展？
 
-仔细想了一下，我们对系统进行了一个简单的改造：
+仔细想了一下，我们对系统进行了简单的改造：
 
 ![]()
 
@@ -67,7 +67,7 @@ categories: 编程技术
 
 > 写脚本的学习成本太高！
 
-更郁闷的是来吐槽的都是“资深”JAVA开发工程师！在现在的系统上面只需要实现一个方法：
+更郁闷的是来吐槽的都是“资深”JAVA开发工程师（GROOVY和JAVA不是很像么）！在现在的系统上面只需要实现一个方法：
 
 <pre class="prettyprint">
 static Ojbect execute(){
@@ -95,11 +95,37 @@ static Object execute(sql, datasource){
 
 保存时会将其填写的信息以及要使用的目标脚本一起保存下来，执行时将参数传给指定的脚本执行即可（是不是有点像带参数的ln）。
 
-将这种功能开放给各个业务系统，那么就可以自己去做各自需要的小白配置页面了。
-
+将该功能开放给各个业务系统，那么就可以自己去做各自需要的小白配置页面了。
 
 ## 组装页面
 
+因为阴差阳错，最近学习了一小点的前端知识，前端开发的模式还是非常的直观，但是对于大部分的后端来说还是门槛较高，需要想办法解决！
+
+首先，想办法对前端的组件进行抽象：
+
+<pre class="prettyprint">
+组件=数据+动作+展示
+</pre>
+
+举个例子，对于一个带下拉列表的输入框各部分对应为：
+
+1. 数据：列表中的内容以及当前展示的内容
+2. 动作：内容发生改变
+3. 展示：用bootstrap等前段框架实现
+
+这样看来组件就比较聚合了，但是光聚合没用啊，一个页面中的所有组件需要互相之间进行交互，比如（正向）：
+
+> 当组件A发生事件E时，组件B需要进行一些操作。
+
+还有一种（反向）：
+
+> 当组件A发生事件E时，需要让组件B进行一些操作。
+
+那具体该怎么用呢？我们自己定义一些非常简单的DSL来控制组件：
+
+<pre class="prettyprint">
+@input(label="仓库" name="warehouse" items=[{text:"A", value:"1"},{text:"B", value:"2"}])
+</pre>
 
 
 
