--- a/_posts/2015-12-17-DOWN-TO-UP.md
+++ b/_posts/2015-12-17-DOWN-TO-UP.md
@@ -23,7 +23,7 @@ categories: 编程技术
 
 其他的操作（数据库、返回数据）不需要你再关心了。YY了一下大部分的需求用SQL绝对绰绰有余，这件事情就这样结束了！**图样图森破啊**！！
 
-我们遇到了这样的需求：
+马上遇到了这样的需求：
 
 <pre class="prettyprint">
 {
@@ -83,9 +83,16 @@ static Ojbect execute(){
 
 显然不能让这种情况发生，解决办法也非常简单：
 
+1. 写一个通用解决问题的脚本
+2. 在执行时，将SQL、数据源信息通过参数传给对应的通用脚本执行
+
+比如一个查询数据库的脚本如下：
+
 <pre class="prettyprint">
 static Object execute(sql, datasource){
-    // 查数据库并返回
+    // 1. 根据datasource获取数据源
+    // 2. 指定sql
+    // 3. 返回执行结果
 }
 </pre>
 
@@ -99,15 +106,9 @@ static Object execute(sql, datasource){
 
 ## 组装页面
 
-因为阴差阳错，最近学习了一小点的前端知识，前端开发的模式还是非常的直观，但是对于大部分的后端来说还是门槛较高，需要想办法解决！
+由于非常缺前端，最近学了一小点的前端知识，开发起来还是非常的直观，但是对于大部分的后端来说还是门槛较高，需要想办法解决！
 
-首先，想办法对前端的组件进行抽象：
-
-<pre class="prettyprint">
-组件=数据+动作+展示
-</pre>
-
-举个例子，对于一个带下拉列表的输入框各部分对应为：
+首先，把页面上的各个部分抽象成组件：**组件=数据+动作+展示**。比如带下拉列表的选择输入框：
 
 1. 数据：列表中的内容以及当前展示的内容
 2. 动作：内容发生改变
@@ -127,9 +128,32 @@ static Object execute(sql, datasource){
 @input(label="仓库" name="warehouse" items=[{text:"A", value:"1"},{text:"B", value:"2"}])
 </pre>
 
+你只需要写这一行就可以实现一个输入框，直观上做了两件事情：
 
+1. 使用组件input
+2. 设置一些属性（数据）
 
+那展示的控制呢？这个显然不应该交给用户来控制，比如：
 
+1. 需要引入哪些CSS、JS？
+2. 对应的DOM结构应该是什么样的？
+
+用户只知道他需要用一个下拉选择框而已，他不需要管这些事情！接下来拼装页面，我们要做的就是把这些组件拼装起来并建立联系：
+
+<pre class="prettyprint">
+@layout// 布局
+    @input(name="a")
+    @input(name="b")
+    @input(name="c")
+    @button// 查询
+        @on(click)
+            // 1. 获取a、b、c的数据
+            // 2. 请求数据
+            // 3. 更新table、page的展示
+@layout
+    @table // 表格
+    @page// 分页
+</pre>
 
 
 
