--- a/_posts/2015-12-17-DOWN-TO-UP.md
+++ b/_posts/2015-12-17-DOWN-TO-UP.md
@@ -21,9 +21,7 @@ categories: 编程技术
 
 > 配置一个数据接口只需要填写一段SQL就可以了！
 
-其他的操作（数据库、返回数据）不需要你再关心了。YY了一下大部分的需求用SQL绝对绰绰有余，这件事情就这样结束了！**图样图森破啊**！！
-
-马上遇到了这样的需求：
+其他的操作（数据库、返回数据）不需要你再关心了。YY了一下大部分的需求用SQL绝对绰绰有余，这件事情就这样结束了！**图样图森破啊**！！马上遇到了这样的需求：
 
 <pre class="prettyprint">
 {
@@ -59,9 +57,9 @@ categories: 编程技术
 
 > 系统有多少的灵活性、可以从哪些方面扩展？
 
-仔细想了一下，我们对系统进行了简单的改造：
+仔细想了一想，我们对系统进行了简单的改造：
 
-![]()
+![](http://7xiz10.com1.z0.glb.clouddn.com/DOWN-TO-UP-1.png)
 
 利用GROOVY脚本极大的灵活性，让系统的适应能力也有所提高！虽然花了很多业务时间来研究ACE的功能来提高编辑体验，但是还是有非常多的同一种吐槽：
 
@@ -98,7 +96,7 @@ static Object execute(sql, datasource){
 
 而此时用户看到的配置页面就小白很多了：
 
-![]()
+![](http://7xiz10.com1.z0.glb.clouddn.com/DOWN-TO-UP-2.png)
 
 保存时会将其填写的信息以及要使用的目标脚本一起保存下来，执行时将参数传给指定的脚本执行即可（是不是有点像带参数的ln）。
 
@@ -182,23 +180,7 @@ static Object execute(sql, datasource){
     @page// 分页
 </pre>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+当请求
 
 
 
@@ -210,7 +192,6 @@ static Object execute(sql, datasource){
 engine.init("page", document.body);// 将page对应的页面渲染到body下面。
 &lt;/script&gt;
 </pre>
-
 
 
 
