--- a/_posts/2015-12-17-DOWN-TO-UP.md
+++ b/_posts/2015-12-17-DOWN-TO-UP.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 从下向上的开发
+title: 从下向上来开发
 date: 2015-12-17
 categories: 编程技术
 
@@ -251,4 +251,4 @@ HTML的操作包括：
 1. 越下越灵活，但门槛越高
 2. 越上越好用，但扩展起来不是很容易
 
-在对一些场景实现工具，根据灵活度和易用性来分成几步来做，这样不同的技术背景的人都可以使用，而且最关键的是可以扩展出更多的使用场景！
+在对一些场景实现工具，根据灵活度和易用性来分成几步来做，这样不同的技术背景的人都可以使用，而且最关键的是可以扩展出更多的使用场景！:-)
