--- a/_posts/2015-06-10-VIM.md
+++ b/_posts/2015-06-10-VIM.md
@@ -8,43 +8,172 @@ categories: 工具
 
 ![](http://7xiz10.com1.z0.glb.clouddn.com/VIM-LOGO.jpg)
 
-很早之前就知道VIM很厉害，不过作为一个Java攻城狮，用起来实在是不方便，完全没有Eclipse或者IDEA写代码顺畅，比如代码提示等（怀疑自己配置有问题-.-!）。最近对golang非常感兴趣，然而默认的IDE实在是太丑了，所以决心把VIM捡起来。
+刚工作时搞过一段时间的VIM和EMACS，不过作为一个JAVA程序猿，用VIM来写JAVA代码还是不大现实（现在用IDEA），后面也就不了了之。最近在写前端代码和写博客时感觉VIM还是不错的，于是决定再把VIM拾起来。
 
-周围用Emacs的同事越来越多，但是简单用了几次，总觉得不怎么顺手，也就不了了之。
+裸的VIM并不是太好用，需要安装需要的插件，之前的玩法是下载对应的压缩包并修改配置，这个过程极其考验耐心和人品！
 
-## 插件管理器
+## 使用vundle管理插件
 
-相比现代编辑器，VIM缺乏默认的插件管理功能，之前在配置时不停地从网上收集插件，然后粘贴到对应的目录下。这个过程相当地考验耐心，以及人品。
+[vundle](https://github.com/VundleVim/Vundle.vim)让你不需要在纠结到哪里去找插件和配置，所有的插件都以相似的方式进行管理，很大程度上降低了使用成本！
 
-最近无意间发现了一个插件管理工具：**vundle**。玩了一下感觉还不错，首先从github上下载:
+插件存放的路径为**~/.vim/bundle/**，目录建好后下载vundle：
 
-> git clone https://github.com/gmarik/vundle.git ~/.vim/bundle/vundle
+> git clone https://github.com/VundleVim/Vundle.vim.git ~/.vim/bundle/Vundle.vim
 
-然后修改**vimrc**文件：
+以后配置都可以在**~/.vimrc**里面完成：
 
 <pre class="prettyprint">
-set nocompatible "关闭兼容模式
-filetype off "
-set rtp+=~/.vim/bundle/Vundle.vim " 写自己安装的目录
-call vundle#begin() "
-
-Bundle 'gmarik/Vundle.vim' " 插件列表
-" ... 插件列表
-
-call vundle#end() "
-filetype plugin indent on
+set nocompatible                       " 关闭所有扩展功能
+filetype off                           " 关闭对文件类型的自动检测
+set rtp+=~/.vim/bundle/Vundle.vim      " 加入运行时路径
+call vundle#begin()                    " 初始化
+" 插件列表开始
+Plugin 'VundleVim/Vundle.vim'          
+" 插件列表结束
+call vundle#end()                      " 完成
+filetype plugin indent on              " 打开文件类型检测
 </pre>
 
-如果是**vim-scripts**下面的插件直接写名字就好了，否则为**用户名/插件**的格式，使用时用到的几个命令如下：
+常用的插件来源配置有：
+
+来源|说明
+-|-
+github.com|github上托管的插件（Plugin 'tpope/vim-fugitive'）
+vim-scripts.org/vim/scripts.html|在该站维护的插件（Plugin 'L9'）
+
+配置完成后打开VIM就可以开始使用了，用到下面命令：
+
+1. **:PluginList**：打开插件列表
+2. **:PluginInstall**：安装插件
+3. **:PluginSearch foo**：搜索插件，找到之后可以选择安装
+4. **:PluginClean**：清理不用的插件（这个不是太懂）
+
+最后举个例子，当你想安装**winmanager**插件时：
+
+1. 在.vimrc中添加`Plugin 'winmanager'`
+2. 打开vim
+3. 执行`:PluginList`就可以看到winmanager插件
+4. 执行`:PluginInstall`进行安装
+
+是不是比以前简单很多了？没有插件管理的繁琐，下面我们正式进入VIM之旅！
+
+## 基本用法
+
+刚从EditPlus切换到VIM时非常不适应，我只想简单地编辑文件而已，居然还要去考虑切换不同的模式：
+
+1. 命令模式
+2. 插入模式
+3. 可视模式
+
+时间久一点就感觉这样区分开还是很合理的，在**命令模式**可以通过一些简单的命令对文本进行快速的查看、修改，比用鼠标在EditPlus里面操作会更有效率。该模式用到的命令非常多，下面分类来看！
+
+### 一、移动光标
+
+可以在各个维度上进行随意地跳转：
 
 命令|作用
 -|-
-:BundleList|列举出列表中(.vimrc中)配置的所有插件
-:BundleInstall|安装列表中全部插件
-:BundleInstall!|更新列表中全部插件
-:BundleSearch foo|查找foo插件
-:BundleSearch! foo|刷新foo插件缓存
-:BundleClean|清除列表中没有的插件
-:BundleClean!|清除列表中没有的插件
+h/j/k/l|向上/向下/向上/向右移动
+ctrl+f/b|向上/向下翻页
+ctrl+d/u|向上/向下翻半页
+$/0/^|行尾/行首/首字符
+\(/\)|上一句/下一句
+w/b|上一个词/下一个词
+gg/G|文档开始/文档结束
+%|括号对应的匹配处
+ngg/nG/:n|到第n行
+H/M/L|屏幕顶部/中间/底部
+*/#|当前字符下一次/上一次出现的位置
 
-## 写代码之前
+### 二、查找替换
+
+命令|作用
+-|-
+:s/s1/s2|下一个s1替换为s2
+:%s/s1/s2|s1全部替换为s2
+:s/s1/s2/g|当前行的s1替换为s2
+:n1,n2 s/s1/s2/g|从n1到n2行的s1替换为s2
+/xxxx|查找xxxx，找到以后按**n**向下继续查找、**N**则向上继续查找
+mx|插入书签（x为小写字母），以后可以用**`x**跳转到该书签处
+`.|上次编辑的位置
+
+### 三、复制、剪切、粘贴、删除
+
+在VIM中存在一些寄存器用来存放复制、删除的内容：
+
+1. `"`：最近删除或复制的内容
+2. `0`：最近复制的内容
+3. `1、2、、9`：最近一次的删除内容放入1，原先1的内容放入2，以此类推
+4. `%`：文件名
+5. `:`：命令
+6. `/`：查找的字符串
+
+编辑时可以用**:reg**来查看各寄存器中的内容！为了方便选取文本VIM中引入了**可视模式**，使用时先移动光标到开始位置，然后用下面命令进入可视模式：
+
+1. `ctrl+v`：块
+2. `v`：普通
+3. `V`：行
+
+接着移动光标就可以选中文本并进行操作了！编辑时常用的命令有：
+
+命令|作用
+-|-
+y|复制选中文本，用`\"ny`来复制到第n号寄存器
+x|剪切选中文本或者删除当前字符
+d|删除选中文本
+p|粘贴，用`\"np`来粘贴第n号寄存器中的内容
+dd|删除当前行
+dw|删除光标后的一个词
+dl|删除一个字符
+D/C|删除到行尾
+yy/Y|复制一行
+
+
+过程中可以使用`u`和`ctrl+r`来进行undo和redo。
+
+### 四、宏
+
+在造数据的时候常会遇到一些简单、机械的操作，这种一般是可以用宏来搞定：
+
+1. `px`：开始记录宏操作，x为小写字母
+2. 操作
+3. `q`：将操作记录到寄存器中
+4. `@x`：执行寄存器x中的操作
+5. `@@`：执行最近一次的录制
+
+同样可以用**:reg**来查看寄存器状态。
+
+### 五、编辑
+
+需要输入时通过下面命令进入插入模式：
+
+命令|说明
+-|-
+i/a|光标前/后插入
+I/A|在行首/尾插入
+o/O|后/前插入一行进行编辑
+s/S|删除一个字符/一行进行编辑
+
+## 多屏编辑
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
