--- a/_posts/2015-06-10-VIM.md
+++ b/_posts/2015-06-10-VIM.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: VIM
+title: VIM入门
 date: 2015-06-10
 categories: 工具
 
@@ -190,5 +190,4 @@ R|替换模式，在画图的时候非常好用
 
 ## 总结
 
-
-
+掌握了这些，简单的文本编辑应该问题不大了，后面会陆续针对更细节的东西来单独写。
