--- a/_posts/2016-01-05-VIM-PAINT.md
+++ b/_posts/2016-01-05-VIM-PAINT.md
@@ -12,10 +12,10 @@ categories: 编程技术
 2. 更小，就是一些文本，比图片什么的小多了，使用起来也更简单
 3. 更有逼格
 
-首先在VIM中安装DrawIt插件（可以参考[这里](http://wsztrush.github.io/%E5%B7%A5%E5%85%B7/2015/06/10/VIM.html)），然后开始画图之旅，在**命令模式**下：
+首先，在VIM中安装DrawIt插件（可以参考[这里](http://wsztrush.github.io/%E5%B7%A5%E5%85%B7/2015/06/10/VIM.html)），然后就可以开始画图之旅，在命令模式下使用：
 
-1. `\di`：开启
-2. `\ds`：关闭
+1. `\di`：开启DrawIt
+2. `\ds`：关闭DrawIt
 
 开启之后有两种模式：**画图**和**擦除**，他们之间通过**空格**来切换。可以使用按键来控制向八个方向画线（或者擦除）：
 
@@ -61,7 +61,7 @@ categories: 编程技术
                                \-----&gt;
 </pre>
 
-可以用`\b`来画矩形框或者用`\e`来画椭圆：
+或用`\b`来画矩形框或者用`\e`来画椭圆：
 
 <pre class="prettyprint">
 +--------------------+          *************      
