--- a/_posts/2016-01-05-VIM-PAINT.md
+++ b/_posts/2016-01-05-VIM-PAINT.md
@@ -91,4 +91,8 @@ categories: 编程技术
 
 > 用鼠标选中要擦除的部分，然后执行r &lt;space&gt;（相当于用空格替换）。
 
-体验了一下，如果能灵活运用VIM本身的强大功能（复制、粘贴等），DrawIt用起来还是比较给力的！
+另外需要注意：ubuntu和mint上安装到VIM默认是不支持**系统剪贴板**的，需要安装：
+
+> sudo apt-get install vim-gnome
+
+简单体验下来，如果能灵活运用VIM本身的强大功能（复制、粘贴等），DrawIt用起来还是挺给力的！
