--- a/_posts/2015-06-10-VIM.md
+++ b/_posts/2015-06-10-VIM.md
@@ -23,7 +23,7 @@ categories: 工具
 以后配置都可以在**~/.vimrc**里面完成：
 
 <pre class="prettyprint">
-set nocompatible                       " 关闭所有扩展功能
+set nocompatible                       " 关闭兼容模式
 filetype off                           " 关闭对文件类型的自动检测
 set rtp+=~/.vim/bundle/Vundle.vim      " 加入运行时路径
 call vundle#begin()                    " 初始化
