--- a/_posts/2015-06-10-VIM.md
+++ b/_posts/2015-06-10-VIM.md
@@ -78,7 +78,7 @@ ctrl+f/b|向上/向下翻页
 ctrl+d/u|向上/向下翻半页
 $/0/^|行尾/行首/首字符
 \(/\)|上一句/下一句
-w/b|上一个词/下一个词
+w/b|下一个词/上一个词
 gg/G|文档开始/文档结束
 %|括号对应的匹配处
 ngg/nG/:n|到第n行
