--- a/_posts/2015-05-30-Guava.md
+++ b/_posts/2015-05-30-Guava.md
@@ -100,7 +100,7 @@ System.out.println(table.column("b")); // {a=1}
 System.out.println(table.row("a")); // {b=1, c=2}
 </pre>
 
-在Guava中还配套了一些集合相关的工具类，比如[Maps](https://github.com/google/guava/wiki/CollectionUtilitiesExplained#maps)：
+在Guava中还配套了一些集合相关的工具类，比如[Maps](https://github.com/google/guava/wiki/CollectionUtilitiesExplained#maps)（现在创建集合基本不用new了）：
 
 <pre class="prettyprint">
 Map&lt;Integer, Map&lt;String, Integer&gt;&gt; map = Maps.newHashMap();
